@@ -1,3 +1,5 @@
+AP-2007-11-06-0: Bugfix:     Added Wallclock Time example query for Postgresql db.
+
 JO-2007-10-31-0: Bugfix:      Long running jobs cause incorrect usage summary from ARCo database
                  Bugster:     6618599
                  Issue:       2414
